Add operating functions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="calculator.js" defer></script>
     <title>Calculator - OP</title>
 </head>
 <body>
@@ -33,8 +34,7 @@
                 <button value="x">x</button>
                 <button value="/">/</button>
                 <button value="=">=</button>
-                <button value="del">DEL</button>
-
+                <button value="clr">CLR</button>
             </div>
         </div>
     </div>
