--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
                 <button value="e" data-btn="number">x10</button>
             </div>
             <div id="operations">
+                <button value="del" data-btn="del">DEL</button>
+                <button value="clr" data-btn="clear">CLR</button>
                 <button value="+" data-btn="operator">+</button>
                 <button value="*" data-btn="operator">x</button>
                 <button value="-" data-btn="operator">-</button>
                 <button value="/" data-btn="operator">/</button>
                 <button value="=" data-btn="equals">=</button>
-                <button value="clr" data-btn="clear">CLR</button>
             </div>
         </div>
     </div>
