--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 <body>
     <div id="calculator">
         <div id="display">
-            <div id="display-prev">
-
-            </div>
-            <div id="display-main">
-
-            </div>
+            <div id="display-prev"></div>
+            <div id="display-main"></div>
         </div>
         <div id="interface">
             <div id="numpad">
